# ComfyUI-BFSNodes

./: README.md  __init__.py  amv_guide_node.py  anime2real_node.py  bernini_patches.py  headswap_node.py  ltx_identity_can.py  ltx_identity_gemma_vision.py  ltx_identity_multiangle.py  ltx_identity_overlap.py  ltxv_editanything.py  multiref_sheet_node.py  nodes.py  pyproject.toml  requirements.txt
