[project]
name = "bfsnodes"
description = "Custom ComfyUI nodes including LTXV Edit Anything, Head-Swap and Anime2Real Bernini conditioning helpers."
version = "1.6.0"
license = {file = "LICENSE"} 
dependencies = [
    "torch",
    "numpy",
    "Pillow",
    "safetensors",
]
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/alisson-anjos/ComfyUI-BFSNodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/alisson-anjos/ComfyUI-BFSNodes/wiki"
"Bug Tracker" = "https://github.com/alisson-anjos/ComfyUI-BFSNodes/issues"

[tool.comfy]
PublisherId = "alisson-anjos"
DisplayName = "ComfyUI-BFSNodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
